kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dizal-web-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: dzl.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dizal-web
                port:
                  number: 80
